--- a/locale/template.txt
+++ b/locale/template.txt
@@ -11,7 +11,7 @@ Rarity has to be smaller than 21!=
 Treasure added!=
 Treasure removed!=
 Treasure not found!=
-TREASURES LIST:=
+Treasures list:=
 The minimum or maximum amount of treasures has to be greater than 0!=
 First arena not found!=
 Second arena not found!=
@@ -22,7 +22,7 @@ name: @1 @nrarity: @2 @npreciousness: @3 @ncount: @4=
 Chest added!=
 Chest removed!=
 Chest not found!=
-CHEST LIST:=
+Chest list:=
 ID: @1 - POSITION: @2=
 Position saved!=
 Schematic @1 created! You can use /skywars info @2 to know its folder (see schematic@=PATH)=
@@ -31,3 +31,13 @@ Schematic @1 created! You can use /skywars info @2 to know its folder (see schem
 Pos1 or pos2 are not set!=
 @1 was killed by @2=
 @1 is dead=
+@1 already exists!=
+@1 added to @2!=
+@1 removed from @2!=
+Choose a kit=
+Kit @1 created!=
+Kit @1 deleted!=
+Kits list:=
+@1 items:=
+Kit not found!=
+@1 kits have been copied to @2!=
