Added some checks to pos2/pos2 and createschematic cmds + Modified HUD proportions

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -25,6 +25,8 @@ Chest not found!=
 Chest list:=
 ID: @1 - POSITION: @2=
 Position saved!=
+You have to look to the north!=
+Pos1 Z has to be smaller than pos2!=
 Schematic @1 created! You can use /skywars info @2 to know its folder (see schematic@=PATH)=
 @1 wasn't configured properly!=
 @1 must be disabled!=
