+ Added timer to arenas + Added new cmds and improved the old ones + Modified some messages

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -8,6 +8,7 @@ Count has to be greater than 0!=
 Rarity has to be greater than 2!=
 Rarity has to be smaller than 21!=
 @1 doesn't exist!=
+Your hand is empty!=
 Treasure added!=
 Treasure removed!=
 Treasure not found!=
@@ -25,7 +26,7 @@ Chest not found!=
 Chest list:=
 ID: @1 - POSITION: @2=
 Position saved!=
-Schematic @1 created! You can use /skywars info @2 to know its folder (see schematic@=PATH)=
+Schematic @1 created! (Saved in @2)=
 @1 wasn't configured properly!=
 @1 must be disabled!=
 Pos1 or pos2 are not set!=
@@ -33,6 +34,7 @@ Pos1 or pos2 are not set!=
 @1 is dead=
 @1 already exists!=
 @1 added to @2!=
+x@1 @2 added to @3 with @4 rarity and @5 preciousness!=
 @1 removed from @2!=
 Choose a kit=
 Kit @1 created!=
@@ -42,3 +44,4 @@ Kits list:=
 Kit not found!=
 @1 kits have been copied to @2!=
 Time is out, the match is over!=
+Nobody=
