+ Added arena_in_edit_mode check for cmds + Added additem hand cmd + Differentiated the arena misconfiguration messages

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -27,7 +27,9 @@ Chest list:=
 ID: @1 - POSITION: @2=
 Position saved!=
 Schematic @1 created! (Saved in @2)=
-@1 wasn't configured properly!=
+You didn't set the treasures!=
+You didn't set the chests!=
+You didn't set the schematic!=
 @1 must be disabled!=
 Pos1 or pos2 are not set!=
 @1 was killed by @2=
@@ -45,3 +47,4 @@ Kit not found!=
 @1 kits have been copied to @2!=
 Time is out, the match is over!=
 Nobody=
+Nobody must be in the editor!=
