--- a/locale/template.txt
+++ b/locale/template.txt
@@ -5,14 +5,15 @@
 
 Arena not found!=
 Count has to be greater than 0!=
-Rarity has to be greater than 2!=
-Rarity has to be smaller than 21!=
+Rarity has to be greater than 0!=
+Rarity has to be smaller than 11!=
 @1 doesn't exist!=
 Your hand is empty!=
 Treasure added!=
 Treasure removed!=
 Treasure not found!=
 Treasures list:=
+You're not looking at anything!=
 The minimum or maximum amount of treasures has to be greater than 0!=
 First arena not found!=
 Second arena not found!=
