+ CRASHFIX: when 3d_armor wasn't installed + remove_armors_on_join setting + addchest checks if the chest already exists + removechest can be used looking at the chest

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -25,6 +25,7 @@ Chest added!=
 Chest removed!=
 Chest not found!=
 Chest list:=
+The chest already exists!=
 ID: @1 - POSITION: @2=
 Position saved!=
 Schematic @1 created! (Saved in @2)=
