+ CRASHFIX: removeitem made the server crash + resetkit cmd + Now the glass around the player is automatically removed   when the match starts

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -45,6 +45,7 @@ Kit @1 deleted!=
 Kits list:=
 @1 items:=
 Kit not found!=
+@1 resetted!=
 @1 kits have been copied to @2!=
 Time is out, the match is over!=
 Nobody=
