--- a/locale/template.txt
+++ b/locale/template.txt
@@ -45,6 +45,7 @@ Kit @1 deleted!=
 Kits list:=
 @1 items:=
 Kit not found!=
+x@1 @2 added to @3!=
 @1 resetted!=
 @1 kits have been copied to @2!=
 Time is out, the match is over!=
