+ Reworked map reset system, it doesn't use schematics anymore - Support for exschem

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -28,11 +28,11 @@ Chest list:=
 The chest already exists!=
 ID: @1 - POSITION: @2=
 Position saved!=
-Schematic @1 created! (Saved in @2)=
 You didn't set the treasures!=
 You didn't set the chests!=
-You didn't set the schematic!=
+You didn't set the map corners!=
 @1 must be disabled!=
+@1 must be enabled!=
 Pos1 or pos2 are not set!=
 @1 was killed by @2=
 @1 already exists!=
@@ -46,7 +46,7 @@ Kits list:=
 @1 items:=
 Kit not found!=
 x@1 @2 added to @3!=
-@1 resetted!=
+@1 reset!=
 @1 kits have been copied to @2!=
 Time is out, the match is over!=
 Nobody=
