+ inspect cmd (to inspect a chest) + kit background width/height properties - tutorial from the cmds   now /tutorial tells the user to look at the file + moved local functions at the end of the source files + now addchest and removechest cmds don't require the   player to specify the arena anymore - addchest pos cmd + tutorial fixes + code cleaning

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -20,13 +20,13 @@ First arena not found!=
 Second arena not found!=
 @1 treasures have been copied to @2!=
 The arenas must be different!=
-name: @1   @nrarity: @2   @npreciousness: @3   @ncount: @4=
+ID: @1   @nname: @2   @nrarity: @3   @npreciousness: @4   @ncount: @5=
 Chest added with @1-@2 preciousness and @3-@4 treasures amount!=
 Chest removed!=
 Chest not found!=
 Chest list:=
 The chest already exists!=
-ID: @1 - Position: @2   @npreciousness: @3-@4   @ntreasures amount: @5-@6=
+ID: @1   @nposition: @2   @npreciousness: @3-@4   @ntreasures amount: @5-@6=
 Position saved!=
 You didn't set the treasures!=
 You didn't set the chests!=
