--- a/locale/template.txt
+++ b/locale/template.txt
@@ -6,38 +6,30 @@
 # @<number> (@1, @2, ecc) is a value that the mod will pass at runtime 
 
 Count has to be greater than 0!=
-Rarity has to be greater than 0!=
-Rarity has to be smaller than 11!=
+Rarity has to be between 1 and 10!=
 @1 doesn't exist!=
 Your hand is empty!=
-Treasure added!=
-Treasure removed!=
 Treasure not found!=
 Treasures list:=
 You're not looking at anything!=
 The minimum or maximum amount of treasures has to be greater than 0!=
-First arena not found!=
-Second arena not found!=
 @1 treasures have been copied to @2!=
 The arenas must be different!=
-ID: @1   @nname: @2   @nrarity: @3   @npreciousness: @4   @ncount: @5=
-Chest added with @1-@2 preciousness and @3-@4 treasures amount!=
+ID: @1, name: @2, rarity: @3, preciousness: @4, count: @5=
 Chest removed!=
 Chest not found!=
 Chest list:=
 The chest already exists!=
-ID: @1   @nposition: @2   @npreciousness: @3-@4   @ntreasures amount: @5-@6=
+ID: @1, position: @2, preciousness: @3-@4, treasures amount: @5-@6=
 Position saved!=
 You didn't set the treasures!=
 You didn't set the chests!=
 You didn't set the map corners!=
 @1 must be disabled!=
 @1 must be enabled!=
-Pos1 or pos2 are not set!=
 @1 was killed by @2=
 @1 already exists!=
 @1 added to @2!=
-x@1 @2 added to @3 with @4 rarity and @5 preciousness!=
 @1 removed from @2!=
 Kit @1 created!=
 Kit @1 deleted!=
