+ Added setting to assign a custom importance to each armor material + Added a message telling a player his/her killer's HP + Added missing translation

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -27,7 +27,6 @@ You didn't set the chests!=
 You didn't set the map corners!=
 @1 must be disabled!=
 @1 must be enabled!=
-@1 was killed by @2=
 @1 already exists!=
 @1 added to @2!=
 @1 removed from @2!=
@@ -45,3 +44,5 @@ x@1 @2 added to @3!=
 Nobody=
 Nobody must be in the editor!=
 Time is out, the match is over!=
+@1 was killed by @2=
+@1 killed you with @2 HPs=
