--- a/locale/template.txt
+++ b/locale/template.txt
@@ -53,3 +53,4 @@ x@1 @2 added to @3!=
 @1 reset!=
 @1 kits have been copied to @2!=
 Nobody must be in the editor!=
+The enabling process may take a few moments, please wait...=
