+ Auto equip system now supports the drop picking + Fixed drops reset system not working if the entity was unloaded + Preventing disabling the arena if it is resetting

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -54,3 +54,4 @@ x@1 @2 added to @3!=
 @1 kits have been copied to @2!=
 Nobody must be in the editor!=
 The enabling process may take a few moments, please wait...=
+@1 is being reset!=
